Changed Search to Search Me

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <h1></h1>
     <form>
       <input type="text" required>
-      <button type="submit" >Search</button>
+      <button type="submit" >Search Me</button>
     </form>
   </body>
 </html>
-<body>
-  <p>asdfasdfasdfasdf</p>
-</body>
